# krustty

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
krustty/: CHANGELOG.md  Cargo.toml
krustty/src/: ansi.rs  color.rs  grid.rs  main.rs  pty.rs  shader.wgsl  terminal.rs
krustty/src/term/: cursor.rs  grid.rs  mod.rs
krustty/src/ui/: cursor.rs  font.rs  grid.rs  mod.rs  pane.rs  terminal.rs  texture.rs  view.rs  window.rs
krustty/src/ui/shaders/: cell.wgsl  solid_rect.wgsl
krustty_rc/: Cargo.toml
