[package]
name = "krustty"
version = "0.0.0"
description = "Rust based terminal emulator"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
bytemuck = "1.25.0"
env_logger = "0.11.9"
fontdue = "0.9.3"
pollster = "0.4.0"
portable-pty = "0.9.0"
rtrb = "0.3.3"
wgpu = "28.0.0"
winit = "0.30.13"
