[package]
name = "krustty"
version = "0.1.2"
description = "Rust based terminal emulator"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
profiling = []

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
bytemuck = "1.25.0"
color-hex = "0.2.0"
fontconfig = "0.10.2"
fontdue = "0.9.3"
log = "0.4.29"
palette = "0.7.6"
pollster = "0.4.0"
portable-pty = "0.9.0"
rtrb = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vte = "0.15.0"
wgpu = "28.0.0"
winit = "0.30.13"
